--- a/pom.xml
+++ b/pom.xml
@@ -20,23 +20,26 @@
         <eclipse.collections.version>9.2.0</eclipse.collections.version>
         <log4j.version>2.6.2</log4j.version>
         <slf4j.version>1.7.21</slf4j.version>
+        <javalin.version>2.8.0</javalin.version>
+        <jusecase.version>1.0.1</jusecase.version>
+        <jusecase.inject.version>0.2.0</jusecase.inject.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
-            <version>2.8.0</version>
+            <version>${javalin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jusecase</groupId>
             <artifactId>inject</artifactId>
-            <version>0.2.0</version>
+            <version>${jusecase.inject.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jusecase</groupId>
             <artifactId>jusecase</artifactId>
-            <version>1.0.1</version>
+            <version>${jusecase.version}</version>
         </dependency>
         <dependency>
             <groupId>com.auth0</groupId>
@@ -61,14 +64,14 @@
         <dependency>
             <groupId>org.jusecase</groupId>
             <artifactId>jusecase</artifactId>
-            <version>1.0.1</version>
+            <version>${jusecase.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jusecase</groupId>
             <artifactId>inject</artifactId>
-            <version>0.2.0</version>
+            <version>${jusecase.inject.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
